cmake_minimum_required(VERSION 3.1)
project(app CXX)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
add_subdirectory(${CMAKE_SOURCE_DIR}/Graph)
add_subdirectory(${CMAKE_SOURCE_DIR}/Tree)
add_subdirectory(${CMAKE_SOURCE_DIR}/Sort)
add_subdirectory(${CMAKE_SOURCE_DIR}/Stack)
include_directories(${CMAKE_SOURCE_DIR}/Graph)
include_directories(${CMAKE_SOURCE_DIR}/Tree)
include_directories(${CMAKE_SOURCE_DIR}/Sort)
include_directories(${CMAKE_SOURCE_DIR}/Stack)
file(GLOB SOURCE_FILES *.cpp)
message(${SOURCE_FILES})
add_executable(app ${SOURCE_FILES})
target_link_libraries(app StaticGraphLib StaticBTreeLib StaticSortLib StaticStackLib)